--- a/.github/workflows/software-engineer.yml
+++ b/.github/workflows/software-engineer.yml
@@ -120,19 +120,24 @@ jobs:
               .replace(/-+/g, "-")
               .slice(0, 40) || `tool-${issueNumber}`;
             const slug = `${baseSlug}-${issueNumber}`;
-            const branch = `codex/se-issue-${issueNumber}-${slug}`.slice(0, 90);
+            const runId = String(context.runId || Date.now());
+            const branch = `codex/se-issue-${issueNumber}-${slug}-${runId}`.slice(0, 100);
 
-            const existingPrs = await github.rest.pulls.list({
+            const linkedPrs = await github.rest.pulls.list({
               owner,
               repo,
               state: "open",
-              head: `${owner}:${branch}`,
-              per_page: 1
+              base: "main",
+              per_page: 100
             });
 
-            if (existingPrs.data.length > 0) {
+            const alreadyOpenForIssue = linkedPrs.data.some((pr) =>
+              String(pr.body || "").includes(`#${issueNumber}`)
+            );
+
+            if (alreadyOpenForIssue) {
               core.setOutput("should_run", "false");
-              core.notice(`Open PR already exists for branch ${branch}.`);
+              core.notice(`Open PR already exists for issue #${issueNumber}.`);
               return;
             }
 
