--- a/.github/workflows/daily-product-owner.yml
+++ b/.github/workflows/daily-product-owner.yml
@@ -78,10 +78,10 @@ jobs:
             });
 
             const extractToolName = (body, fallbackTitle = "") => {
-              const match = String(body || "").match(/## Tool\\s*([\\s\\S]*?)(\\n## |\\n---|$)/i);
+              const match = String(body || "").match(/## Tool\s*([\s\S]*?)(\n## |\n---|$)/i);
               if (!match || !match[1]) return fallbackTitle;
               const line = match[1]
-                .split("\\n")
+                .split("\n")
                 .map((row) => row.trim())
                 .find(Boolean);
               return line || fallbackTitle;
@@ -90,14 +90,14 @@ jobs:
             const normalize = (text) =>
               String(text || "")
                 .toLowerCase()
-                .replace(/\\[[^\\]]+\\]/g, "")
-                .replace(/[^a-z0-9\\s]/g, " ")
-                .replace(/\\s+/g, " ")
+                .replace(/\[[^\]]+\]/g, "")
+                .replace(/[^a-z0-9\s]/g, " ")
+                .replace(/\s+/g, " ")
                 .trim();
 
             const existingToolNames = new Set(
               recent.data.map((issue) =>
-                normalize(extractToolName(issue.body, issue.title.replace(/^\\[[^\\]]+\\]\\s*/, "")))
+                normalize(extractToolName(issue.body, issue.title.replace(/^\[[^\]]+\]\s*/, "")))
               )
             );
 
